# hjLabs.in-whatsapp-mcp-server

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
whatsapp-bridge/: .dockerignore  Dockerfile  main.go
whatsapp-mcp-server/: .dockerignore  Dockerfile  main.py  pyproject.toml  test_whatsapp.py  whatsapp.py
