[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "WhatsApp MCP Server for Claude and other AI assistants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
